DX-2299 Fixed Vertical Alignment of HTTP Methods in API Reference

--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -279,6 +279,12 @@ div.text--center {
   font-size: 8px;
 }
 
+/* Change vertical alignment of operations to align with summary*/
+.RedocStandalone div.menu-content div.scrollbar-container 
+  ul li label span.operation-type {
+  margin-top: 4px;
+}
+
 /* ------- Right Panel Overrides ------- */
 .RedocStandalone code {
   padding: 0px;
